--- a/msvc/OpenXLSX/OpenXLSX.vcxproj
+++ b/msvc/OpenXLSX/OpenXLSX.vcxproj
@@ -82,7 +82,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e92322f3-83ae-457c-aa8b-b8a8ad2ddf6a}</ProjectGuid>
+    <ProjectGuid>{E92322F3-83AE-457C-AA8B-B8A8AD2DDF6A}"}</ProjectGuid>
     <RootNamespace>OpenXLSX</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
